--- a/NetflixTask/Base.lproj/Main.storyboard
+++ b/NetflixTask/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Ui1-qK-1hh">
     <device id="retina6_1" orientation="portrait" appearance="dark"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -314,50 +314,20 @@
             </objects>
             <point key="canvasLocation" x="699" y="75"/>
         </scene>
-        <!--View Controller-->
-        <scene sceneID="qxa-Ik-hL7">
+        <!--CodeSignUpViewController-->
+        <scene sceneID="9x4-CA-35U">
             <objects>
-                <viewController id="QjK-3y-y04" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="6eO-Bp-4Da">
+                <viewController storyboardIdentifier="CodeSignUpViewController" title="CodeSignUpViewController" id="Ui1-qK-1hh" customClass="CodeSignUpViewController" customModule="NetflixTask" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="DtS-nE-DGp">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="k7W-rs-aeg"/>
+                        <viewLayoutGuide key="safeArea" id="bNQ-0K-dXX"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="mDG-QN-ex0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jiC-mG-eAv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1707" y="357"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="O2z-ZO-eTl">
-            <objects>
-                <viewController id="RKX-Ht-IWK" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="Rh7-Jn-0FR">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="wmg-cM-QCP"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="bHh-tV-Tgf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1707" y="1141"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="sud-Yd-KCm">
-            <objects>
-                <viewController id="MbC-8j-z8w" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="1Dt-vL-P4f">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="wNY-Xb-JsN"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Rqr-aS-k09" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1697" y="-335"/>
+            <point key="canvasLocation" x="-43" y="916"/>
         </scene>
     </scenes>
     <designables>
